--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changes-plugin</artifactId>
+                <version>2.3</version>
                 <configuration>
                     <issueLinkTemplatePerSystem>
                         <default>https://github.com/khmarbaise/sapm/issues/%ISSUE%</default>
