--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,9 @@
     </properties>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:khmarbaise/sapm.git</developerConnection>
-        <connection>scm:git:git://github.com/khmarbaise/sapm.git</connection>
-        <url>https://github.com/khmarbaise/sapm</url>
+        <developerConnection>scm:git:git@github.com:khmarbaise/smpp.git</developerConnection>
+        <connection>scm:git:git://github.com/khmarbaise/smpp.git</connection>
+        <url>https://github.com/khmarbaise/smpp</url>
     </scm>
 
     <distributionManagement>
@@ -116,6 +116,11 @@
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>2.3.1</version>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>2.2</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -170,11 +175,6 @@
               </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>3.0-beta-3</version>
-            </plugin>
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-project-info-reports-plugin</artifactId>
@@ -263,9 +263,6 @@
                 </plugins>
             </build>
         </profile>
-    </profiles>
-<!--
-    <profiles>
         <profile>
             <id>maven-3</id>
             <activation>
@@ -302,6 +299,15 @@
                     </plugin>
                 </plugins>
             </build>
+            <reporting>
+              <plugins>
+               <plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-site-plugin</artifactId>
+		    <version>3.0-beta-3</version>
+		</plugin>
+              </plugins>
+            </reporting>
         </profile>
     </profiles>
 -->
