--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,14 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
           <version>3.0</version>
+          <dependencies>
+            <!-- Add support for scp/ssh -->
+            <dependency>
+              <groupId>org.apache.maven.wagon</groupId>
+              <artifactId>wagon-ssh</artifactId>
+              <version>1.0</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -276,6 +284,14 @@
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-site-plugin</artifactId>
               <version>3.0</version>
+              <dependencies>
+                <!-- Add support for scp/ssh -->
+                <dependency>
+                  <groupId>org.apache.maven.wagon</groupId>
+                  <artifactId>wagon-ssh</artifactId>
+                  <version>1.0</version>
+                </dependency>
+              </dependencies>
             </plugin>
             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
