--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     </developer>
   </developers>
 
+  <!-- Must be overwritten in every project. -->
   <issueManagement>
     <system>default</system>
     <url>https://github.com/khmarbaise/sapm/issues</url>
@@ -70,7 +71,7 @@
     <maven-surefire-report-plugin.version>2.12</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
-    <appassembler-maven-plugin.version>1.2.1</appassembler-maven-plugin.version>
+    <appassembler-maven-plugin.version>1.2.2</appassembler-maven-plugin.version>
     <cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
     <versions-maven-plugin.version>1.3.1</versions-maven-plugin.version>
@@ -351,7 +352,6 @@
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.16</version>
-        <type>bundle</type>
       </dependency>
     </dependencies>
   </dependencyManagement>
