- Fixed email for lead - Updated several plugin versions. - Updated changes.xml file according to the releases.

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <developer>
       <id>kama</id>
       <name>Karl Heinz Marbaise</name>
-      <email>sapm@soebes.de</email>
+      <email>smpp@soebes.de</email>
       <roles>
         <role>Lead</role>
         <role>Committer</role>
@@ -50,9 +50,9 @@
     <!-- Maven Plugins -->
     <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
     <maven-assembly-plugin.version>2.3</maven-assembly-plugin.version>
-    <maven-changes-plugin.version>2.7</maven-changes-plugin.version>
-    <maven-clean-plugin.version>2.4.1</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>2.4</maven-compiler-plugin.version>
+    <maven-changes-plugin.version>2.7.1</maven-changes-plugin.version>
+    <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
+    <maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>2.4</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
     <maven-failsafe-plugin.version>2.12</maven-failsafe-plugin.version>
@@ -63,7 +63,7 @@
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.4</maven-project-info-reports-plugin.version>
-    <maven-release-plugin.version>2.2.2</maven-release-plugin.version>
+    <maven-release-plugin.version>2.3.2</maven-release-plugin.version>
     <maven-resources-plugin.version>2.5</maven-resources-plugin.version>
     <maven-site-plugin.version>3.1</maven-site-plugin.version>
     <maven-source-plugin.version>2.1.2</maven-source-plugin.version>
