--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -84,7 +87,7 @@
   <scm>
     <developerConnection>scm:git:git@github.com:khmarbaise/smpp.git</developerConnection>
     <connection>scm:git:git://github.com/khmarbaise/smpp.git</connection>
-    <url>https://github.com/khmarbaise/smpp</url>
+    <url>http://khmarbaise.github.com/smpp/</url>
     <tag>HEAD</tag>
   </scm>
 
@@ -385,7 +388,7 @@
             <artifactId>maven-source-plugin</artifactId>
             <executions>
               <execution>
-                 <id>attach-sources-no-fork</id>
+                <id>attach-sources-no-fork</id>
                 <inherited>true</inherited>
                 <goals>
                   <goal>jar-no-fork</goal>
@@ -438,7 +441,29 @@
               </execution>
             </executions>
           </plugin>
+          <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.7</version>
+            <configuration>
+              <message>Creating site for ${project.version}</message>
+              <server>github</server>
+              <override>true</override>
+              <includeAttached>true</includeAttached>
+              <server>github</server>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>site</phase>
+              </execution>
+            </executions>
+          </plugin>
         </plugins>
+
+
       </build>
       <reporting>
         <plugins>
