--- a/pom.xml
+++ b/pom.xml
@@ -53,25 +53,28 @@
     <maven-changes-plugin.version>2.7.1</maven-changes-plugin.version>
     <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
     <maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
-    <maven-dependency-plugin.version>2.4</maven-dependency-plugin.version>
+    <maven-dependency-plugin.version>2.5.1</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
-    <maven-failsafe-plugin.version>2.12</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>2.12.3</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
-    <maven-install-plugin.version>2.3.1</maven-install-plugin.version>
+    <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
+    <maven-ear-plugin.version>2.8</maven-ear-plugin.version>
+    <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
+    <maven-invoker-plugin.version>1.7</maven-invoker-plugin.version>
     <maven-javadoc-plugin.version>2.8.1</maven-javadoc-plugin.version>
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
-    <maven-project-info-reports-plugin.version>2.4</maven-project-info-reports-plugin.version>
+    <maven-project-info-reports-plugin.version>2.5.1</maven-project-info-reports-plugin.version>
     <maven-release-plugin.version>2.3.2</maven-release-plugin.version>
-    <maven-resources-plugin.version>2.5</maven-resources-plugin.version>
+    <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-site-plugin.version>3.1</maven-site-plugin.version>
     <maven-source-plugin.version>2.1.2</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.12</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.12</maven-surefire-report-plugin.version>
+    <maven-surefire-plugin.version>2.12.3</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.12.3</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
-    <appassembler-maven-plugin.version>1.2.2</appassembler-maven-plugin.version>
+    <appassembler-maven-plugin.version>1.3</appassembler-maven-plugin.version>
     <cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
     <versions-maven-plugin.version>1.3.1</versions-maven-plugin.version>
@@ -143,6 +146,21 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>${maven-jar-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-ear-plugin</artifactId>
+          <version>${maven-ear-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>${maven-shade-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-invoker-plugin</artifactId>
+          <version>${maven-invoker-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
