--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     <maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>2.5.1</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
-    <maven-failsafe-plugin.version>2.12.3</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>2.12.4</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -70,8 +70,8 @@
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-site-plugin.version>3.1</maven-site-plugin.version>
     <maven-source-plugin.version>2.1.2</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.12.3</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.12.3</maven-surefire-report-plugin.version>
+    <maven-surefire-plugin.version>2.12.4</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.12.4</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
     <appassembler-maven-plugin.version>1.3</appassembler-maven-plugin.version>
@@ -85,6 +85,9 @@
 
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <!-- target/source of the java code. -->
+    <compileVersion>1.6</compileVersion>
   </properties>
 
   <scm>
@@ -183,8 +186,8 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>${compileVersion}</source>
+            <target>${compileVersion}</target>
           </configuration>
         </plugin>
         <plugin>
