--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
     <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
     <maven-ear-plugin.version>2.8</maven-ear-plugin.version>
+    <maven-war-plugin.version>2.3</maven-war-plugin.version>
     <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
     <maven-invoker-plugin.version>1.7</maven-invoker-plugin.version>
     <maven-javadoc-plugin.version>2.8.1</maven-javadoc-plugin.version>
@@ -154,6 +155,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-ear-plugin</artifactId>
           <version>${maven-ear-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${maven-war-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
