--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
     <!-- Maven Plugins -->
     <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
     <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
-    <maven-changes-plugin.version>2.7.1</maven-changes-plugin.version>
+    <maven-changes-plugin.version>2.8</maven-changes-plugin.version>
     <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
-    <maven-failsafe-plugin.version>2.12.4</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>2.13</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -71,8 +71,8 @@
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-site-plugin.version>3.2</maven-site-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.12.4</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.12.4</maven-surefire-report-plugin.version>
+    <maven-surefire-plugin.version>2.13</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.13</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
     <appassembler-maven-plugin.version>1.3</appassembler-maven-plugin.version>
@@ -276,7 +276,7 @@
         <version>${maven-changes-plugin.version}</version>
         <configuration>
           <issueLinkTemplatePerSystem>
-            <default>https://github.com/khmarbaise/sapm/issues/%ISSUE%</default>
+            <default>https://github.com/khmarbaise/smpp/issues/%ISSUE%</default>
           </issueLinkTemplatePerSystem>
         </configuration>
         <reportSets>
@@ -314,7 +314,7 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>${maven-pmd-plugin.version}</version>
         <configuration>
-          <targetJdk>1.5</targetJdk>
+          <targetJdk>${compileVersion}</targetJdk>
         </configuration>
       </plugin>
 
