--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,10 @@
   <url>https://github.com/khmarbaise/smpp</url>
   <inceptionYear>2011</inceptionYear>
 
+  <prerequisites>
+    <maven>3.0</maven>
+  </prerequisites>
+
   <organization>
     <name>SoftwareEntwicklung Beratung Schulung</name>
     <url>http://www.soebes.com</url>
@@ -61,6 +65,7 @@
     <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
     <maven-invoker-plugin.version>1.8</maven-invoker-plugin.version>
     <maven-javadoc-plugin.version>2.9</maven-javadoc-plugin.version>
+    <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.6</maven-project-info-reports-plugin.version>
@@ -242,6 +247,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>${maven-javadoc-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-remote-resources-plugin</artifactId>
+          <version>${maven-remote-resources-plugin.version}</version>
         </plugin>
 
         <!--  Codehaus Plugins -->
