--- a/pom.xml
+++ b/pom.xml
@@ -442,6 +442,11 @@
         <artifactId>guava</artifactId>
         <version>13.0.1</version>
       </dependency>
+      <dependency>
+        <groupId>com.beust</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>1.30</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
