--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,10 @@
     <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
     <maven-changes-plugin.version>2.8</maven-changes-plugin.version>
     <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
-    <maven-dependency-plugin.version>2.6</maven-dependency-plugin.version>
+    <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
+    <maven-dependency-plugin.version>2.7</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
-    <maven-failsafe-plugin.version>2.13</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>2.14.1</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -69,18 +69,20 @@
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
     <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
     <maven-project-info-reports-plugin.version>2.6</maven-project-info-reports-plugin.version>
-    <maven-release-plugin.version>2.4</maven-release-plugin.version>
+    <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-site-plugin.version>3.2</maven-site-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.13</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.13</maven-surefire-report-plugin.version>
+    <maven-surefire-plugin.version>2.14.1</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.14.1</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
-    <appassembler-maven-plugin.version>1.3</appassembler-maven-plugin.version>
+    <appassembler-maven-plugin.version>1.3.1</appassembler-maven-plugin.version>
     <cobertura-maven-plugin.version>2.5.2</cobertura-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
     <versions-maven-plugin.version>2.0</versions-maven-plugin.version>
+    <build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
+    <buildnumber-maven-plugin.version>1.2</buildnumber-maven-plugin.version>
 
     <!-- Other Plugins -->
     <antlr3-maven-plugin.version>3.4</antlr3-maven-plugin.version>
@@ -310,6 +312,16 @@
           <artifactId>cobertura-maven-plugin</artifactId>
           <version>${cobertura-maven-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>build-helper-maven-plugin</artifactId>
+          <version>${build-helper-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>buildnumber-maven-plugin</artifactId>
+          <version>${buildnumber-maven-plugin.version}</version>
+        </plugin>
         <!--  Other Plugins -->
         <plugin>
           <groupId>org.antlr</groupId>
@@ -425,7 +437,7 @@
       <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
-        <version>6.8</version>
+        <version>6.8.1</version>
       </dependency>
       <dependency>
         <groupId>org.easytesting</groupId>
@@ -433,14 +445,29 @@
         <version>1.4</version>
       </dependency>
       <dependency>
+        <groupId>org.easytesting</groupId>
+        <artifactId>fest-assert-core</artifactId>
+        <version>2.0M10</version>
+      </dependency>
+      <dependency>
+        <groupId>org.easytesting</groupId>
+        <artifactId>fest-joda-time-assert</artifactId>
+        <version>1.1.0</version>
+      </dependency>
+      <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.16</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>2.0-beta5</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>13.0.1</version>
+        <version>14.0.1</version>
       </dependency>
       <dependency>
         <groupId>com.beust</groupId>
@@ -534,30 +561,9 @@
               </execution>
             </executions>
           </plugin>
-          <plugin>
-            <groupId>com.github.github</groupId>
-            <artifactId>site-maven-plugin</artifactId>
-            <version>0.7</version>
-            <configuration>
-              <message>Creating site for ${project.version}</message>
-              <server>github</server>
-              <override>true</override>
-              <includeAttached>true</includeAttached>
-              <server>github</server>
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>site</goal>
-                </goals>
-                <phase>site</phase>
-              </execution>
-            </executions>
-          </plugin>
         </plugins>
-
-
       </build>
+
       <reporting>
         <plugins>
           <plugin>
