--- a/pom.xml
+++ b/pom.xml
@@ -51,41 +51,41 @@
     <!-- Maven Plugins -->
     <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
     <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
-    <maven-changes-plugin.version>2.8</maven-changes-plugin.version>
+    <maven-changes-plugin.version>2.9</maven-changes-plugin.version>
     <maven-clean-plugin.version>2.5</maven-clean-plugin.version>
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
-    <maven-dependency-plugin.version>2.7</maven-dependency-plugin.version>
+    <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
-    <maven-failsafe-plugin.version>2.14.1</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>2.15</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
     <maven-ear-plugin.version>2.8</maven-ear-plugin.version>
-    <maven-war-plugin.version>2.3</maven-war-plugin.version>
-    <maven-shade-plugin.version>2.0</maven-shade-plugin.version>
+    <maven-war-plugin.version>2.4</maven-war-plugin.version>
+    <maven-shade-plugin.version>2.1</maven-shade-plugin.version>
     <maven-invoker-plugin.version>1.8</maven-invoker-plugin.version>
-    <maven-javadoc-plugin.version>2.9</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>2.9.1</maven-javadoc-plugin.version>
     <maven-remote-resources-plugin.version>1.4</maven-remote-resources-plugin.version>
     <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
-    <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
-    <maven-project-info-reports-plugin.version>2.6</maven-project-info-reports-plugin.version>
+    <maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
+    <maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
     <maven-release-plugin.version>2.4.1</maven-release-plugin.version>
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
-    <maven-site-plugin.version>3.2</maven-site-plugin.version>
+    <maven-site-plugin.version>3.3</maven-site-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.14.1</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.14.1</maven-surefire-report-plugin.version>
+    <maven-surefire-plugin.version>2.15</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.15</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
-    <appassembler-maven-plugin.version>1.3.1</appassembler-maven-plugin.version>
+    <appassembler-maven-plugin.version>1.4</appassembler-maven-plugin.version>
     <cobertura-maven-plugin.version>2.5.2</cobertura-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
-    <versions-maven-plugin.version>2.0</versions-maven-plugin.version>
+    <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
     <build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
     <buildnumber-maven-plugin.version>1.2</buildnumber-maven-plugin.version>
 
     <!-- Other Plugins -->
-    <antlr3-maven-plugin.version>3.4</antlr3-maven-plugin.version>
+    <antlr3-maven-plugin.version>3.5</antlr3-maven-plugin.version>
     <maven-license-plugin.version>1.9.0</maven-license-plugin.version>
 
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -437,7 +437,7 @@
       <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
-        <version>6.8.1</version>
+        <version>6.8.3</version>
       </dependency>
       <dependency>
         <groupId>org.easytesting</groupId>
@@ -573,6 +573,32 @@
           </plugin>
         </plugins>
       </reporting>
+    </profile>
+
+    <profile>
+      <id>github</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.github.github</groupId>
+            <artifactId>site-maven-plugin</artifactId>
+            <version>0.8</version>
+            <configuration>
+              <message>Creating site for ${project.version}</message>
+              <server>github</server>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>site</goal>
+                </goals>
+                <phase>post-site</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+
     </profile>
   </profiles>
 </project>
