--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
-    <maven-failsafe-plugin.version>2.15</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>2.16</maven-failsafe-plugin.version>
     <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.4</maven-install-plugin.version>
     <maven-jar-plugin.version>2.4</maven-jar-plugin.version>
@@ -73,12 +73,12 @@
     <maven-resources-plugin.version>2.6</maven-resources-plugin.version>
     <maven-site-plugin.version>3.3</maven-site-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>2.15</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.15</maven-surefire-report-plugin.version>
+    <maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.16</maven-surefire-report-plugin.version>
 
     <!-- Codehaus Plugins -->
     <appassembler-maven-plugin.version>1.4</appassembler-maven-plugin.version>
-    <cobertura-maven-plugin.version>2.5.2</cobertura-maven-plugin.version>
+    <cobertura-maven-plugin.version>2.6</cobertura-maven-plugin.version>
     <jdepend-maven-plugin.version>2.0-beta-2</jdepend-maven-plugin.version>
     <versions-maven-plugin.version>2.1</versions-maven-plugin.version>
     <build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
@@ -437,12 +437,17 @@
       <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
-        <version>6.8.3</version>
+        <version>6.8.7</version>
       </dependency>
       <dependency>
         <groupId>org.easytesting</groupId>
         <artifactId>fest-assert</artifactId>
         <version>1.4</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>1.9.5</version>
       </dependency>
       <dependency>
         <groupId>org.easytesting</groupId>
@@ -462,17 +467,17 @@
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j</artifactId>
-        <version>2.0-beta5</version>
+        <version>2.0-beta8</version>
       </dependency>
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>14.0.1</version>
+        <version>15.0</version>
       </dependency>
       <dependency>
         <groupId>com.beust</groupId>
         <artifactId>jcommander</artifactId>
-        <version>1.30</version>
+        <version>1.32</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
