--- a/pom.xml
+++ b/pom.xml
@@ -448,6 +448,11 @@
         <version>6.8.7</version>
       </dependency>
       <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+      </dependency>
+      <dependency>
         <groupId>org.easytesting</groupId>
         <artifactId>fest-assert</artifactId>
         <version>1.4</version>
