--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>${maven-release-plugin.version}</version>
+          <configuration>
+            <goals>deploy site site:stage scm-publish:publish-scm</goals>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
